# insetor

./: pyproject.toml
insetor_api/: db.sqlite3
insetor_api/api/: utils.py
insetor_api/api/insetor/: apps.py  urls.py
insetor_api/api/insetor/migrations/: 0001_initial.py
insetor_api/api/insetor/models/: employee.py  sector.py
insetor_api/api/insetor/repositories/: employee.py  sector.py
insetor_api/api/insetor/services/: employee.py  sector.py
insetor_api/api/insetor/transports/: employee.py  sector.py
insetor_api/api/insetor/views/: employee.py  sector.py
insetor_api/config/: asgi.py  settings.py  urls.py  wsgi.py
