[tool.poetry]
name = "setor-api"
version = "0.1.0"
description = ""
authors = ["Mateus Cavalcanti <mateuscavalcanti1607@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
